# cxx-interop-cv-resize-demo

./: .gitignore  Cargo.toml  README.md  bench.sh  build.rs
cvresize/: Makefile
cvresize/include/: cvresize.h
cvresize/src/cvresize/: cvresize.cpp  resize.cpp
src/: main.rs
